--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="header_content">
                 <div class="logo float-left">
-                    <img src="images/cyber.jpg" alt="شعار الأمن السيبراني"  />
+                    <img src="cyber.jpg" alt="شعار الأمن السيبراني"  />
                 </div>
                 <ul class="nav float-left">
                     <li><a href="#" class="active">الرئيسية</a></li>
@@ -83,7 +83,7 @@
         <div class="container">
             <div class="serves-content">
                 <div class="serves-item">
-                    <img src="images/cyber1.jpg" alt="اختبار الاختراق" />
+                    <img src="cyber1.jpg" alt="اختبار الاختراق" />
                     <div class="lay-content">
                         <div class="lay-info">
                             <span class="cat">اختبار الاختراق</span>
@@ -93,7 +93,7 @@
                     </div>
                 </div>
                 <div class="serves-item mg">
-                    <img src="images/vulnerability.jpg" alt="تحليل الثغرات" />
+                    <img src="vulnerability.jpg" alt="تحليل الثغرات" />
                     <div class="lay-content">
                         <div class="lay-info">
                             <span class="cat">تحليل الثغرات</span>
@@ -103,7 +103,7 @@
                     </div>
                 </div>
                 <div class="serves-item">
-                    <img src="images/encryption.jpg" alt="التشفير" />
+                    <img src="encryption.jpg" alt="التشفير" />
                     <div class="lay-content">
                         <div class="lay-info">
                             <span class="cat">التشفير</span>
@@ -155,7 +155,7 @@
             <div class="work-content">
                 <div class="work-item">
                     <div class="work-item-img">
-                        <img src="images/project1.jpg" alt="مشروع 1" />
+                        <img src="project1.jpg" alt="مشروع 1" />
                     </div>
                     <div class="work-info">
                         <ul class="work-item-list">
@@ -183,7 +183,7 @@
             <div class="blog-content">
                 <div class="blog-item ttb-effect">
                     <div class="blog-item-img">
-                        <img src="images/blog1.jpg" alt="مقال 1" />
+                        <img src="blog1.jpg" alt="مقال 1" />
                         <div class="blog-item-overlay">
                             <a href="#"><i class="fa fa-facebook"></i></a>
                             <a href="#"><i class="fa fa-twitter"></i></a>
@@ -236,7 +236,7 @@
 
     <!-- Footer -->
     <div class="footer">
-        <img src="images/cyber.jpg" alt="شعار الأمن السيبراني" />
+        <img src="cyber.jpg" alt="شعار الأمن السيبراني" />
         <ul class="footer-links">
             <li><a href="#" class="hover-opacity"><i class="fa fa-facebook"></i></a></li>
             <li><a href="#" class="hover-opacity"><i class="fa fa-twitter"></i></a></li>
@@ -248,3 +248,4 @@
     </div>
 </body>
 </html>
+
